--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ nav {
 }
 a {
   text-decoration: none;
+  color: var(--main-text-color);
 }
 .nav-link:visited {
   color: var(--main-text-color);
